--- a/package.json
+++ b/package.json
@@ -50,7 +50,13 @@
       "no-use-before-define": 0,
       "arrow-body-style": 0,
       "dot-notation": 0,
-      "no-console": 0
+      "no-console": 0,
+      "no-mixed-operators": 0,
+      "no-param-reassign": 0,
+      "indent": 0,
+      "consistent-return": 0,
+      "max-len": 0,
+      "no-unused-vars": 0
     },
     "env": {
       "mocha": true
