--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
       "indent": 0,
       "consistent-return": 0,
       "max-len": 0,
-      "no-unused-vars": 0
+      "no-unused-vars": 0,
+      "linebreak-style": 0
     },
     "env": {
       "mocha": true
