--- a/package.json
+++ b/package.json
@@ -7,17 +7,22 @@
     "build": "babel . -d dist --presets es2015,stage-2 --ignore spec.js,node_modules",
     "serve": "node dist/server.js",
     "start_babel": "babel-node ./server.js --preset=babel-preset-es2015",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/.bin/mocha --compilers js:babel-core/register --reporter spec",
     "lint": "eslint ."
   },
   "author": "",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "chai": "^4.1.2",
     "cors": "^2.8.0",
     "express": "4.14.0",
     "lodash": "^4.15.0",
+    "mocha": "^4.0.1",
     "mongoose": "^4.8.6",
     "morgan": "^1.8.2",
+    "sinon": "^4.1.3",
+    "supertest": "^3.0.0",
+    "supertest-as-promised": "^4.0.2",
     "winston": "^2.3.1",
     "winston-daily-rotate-file": "^1.4.6"
   },
